# recallops

./: .gitignore  AI_USAGE.md  DEMO_VIDEO_SCRIPT.md  LICENSE  README.md  SLIDES.md  SUBMISSION.md  VERIFICATION.md  agent_config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: band-spike-proof.json
recallops/: __init__.py  api.py  approval.py  cases.py  enterprise.py  erp_contract.py  esignature.py  filing_pack.py  identity.py  live_drill.py  live_proof.py  notifications.py  partner_ai.py  rate_limit.py  recall_room.py  regulatory.py  rules.py  sap_sandbox.py  source_evidence.py  workflow.py
scripts/: __init__.py  band_spike.py  generate_demo_packet.py
tests/: conftest.py  test_api.py  test_band_tool_coverage.py  test_demo_packet.py  test_live_drill.py  test_production_surfaces.py  test_recall_room.py  test_receipts.py  test_rules.py  test_source_evidence.py  test_spike_config.py  test_workflow.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: bat-4421-replay.tsx  enterprise-readiness.tsx  globals.css  layout.tsx  live-band-runner.tsx  live-drill.tsx  operator-workflow.tsx  page.tsx  product-tabs.tsx  proof-label.tsx  recall-data.ts  site-nav.tsx  source-evidence-cockpit.tsx  theme-toggle.tsx
web/app/app/: page.tsx
web/app/console/: page.tsx
web/app/docs/: page.tsx
web/app/favicon.ico/: route.ts
web/app/integrations/: page.tsx
web/app/judge/: page.tsx
web/app/judge-mode/: page.tsx
web/app/proof/: page.tsx  proof-explorer.tsx
web/app/security/: page.tsx
web/app/slides/: page.tsx
web/public/: demo-packet.json
(+9 files in other folders)
