[project]
name = "recallops"
version = "0.1.0"
description = "Band-native product recall command room"
requires-python = ">=3.11"
dependencies = [
    "band-sdk==1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
