[project]
name = "recallops"
version = "0.1.0"
description = "Band-native product recall command room"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "band-sdk==1.0.0",
    "cryptography>=45.0.0",
    "fastapi>=0.128.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["recallops*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
